# PP-ejercicio1

./: .gitignore  CMakeLists.txt  Ej_acta_reunion.es (1).rtf  Ej_acta_reunion.es.rtf  Ej_acta_reunion3.es.docx  Makefile  PPROG-25_26-DiagramaGantt-I1 (3).ods  PPROG-25_26-DiagramaGantt-I2 terminado.ods  PPROG-25_26-DiagramaGantt-I3 final.xlsx  castle  character.c  character.h  command.c  command.h  game.c  game.h  game1.txt  game_actions.c  game_actions.h  game_loop.c  game_reader.c  game_reader.h  graphic_engine.c  graphic_engine.h  inventory.c  inventory.h  libscreen.c  libscreen.h  link.c  link.h  link_test.c  makefile  music.c  music.h  object.c  object.h  object_test.c  object_test.h  p1_e1.c  p1_e2.c  (+14 more)
PP-ejercicio1-pruebas/: PP-ejercicio1-pruebas.rar  character_test.h  command.c  game.c  game_loop.c  game_reader.c  graphic_engine.c  graphic_engine.h  makefile  set.h  space.c  space.h  space_test.h  types.h
include/: character.c  character.h  character_test.h  command.h  game.h  inventory.h  link_test.c  object.c  object.h  player.h  space.h  types.h
src/: character.c  character_test.c  command.c  game.c  game.h  game_actions.c  game_loop.c  game_managment.c  game_reader.c  graphic_engine.c  link.c  link_test.c  object.c  player.c  space.c
